--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # --- Change what appears in the banner --- #
-title: My Language Learning Website
-description: This is the tag-line of my website.
+title: Learn Russian
+description: Join 258 million Russian speakers and learn the largest native language in Europe.
 
 # --- Change language of site --- #
-lang: en
+lang: En
 
 # --- List of links in the navigation bar --- #
 # --- Only change these if you change the name of your .md files!! --- #
