--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,6 @@ github:
   page3: page3.html
   page4: page4.html
   page5: page5.html
+  page6: page6.html
+  page7: page7.html
+  page8: page8.html
