--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # --- Change what appears in the banner --- #
-title: <title style="color:red;">LearnRussian!</title>
+title: LearnRussian!
 description: Join 258 million Russian speakers and learn the largest native language in Europe.
 
 # --- Change language of site --- #
