--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ lang: En
 # --- Only change these if you change the name of your .md files!! --- #
 # --- And, only change the names of the HTML files e.g. page2.html --- #
 github:
-  page1: index.html
-  page2: page2.html
-  page3: page3.html
-  page4: page4.html
-  page5: page5.html
-  page6: page6.html
+  page1: Home.html
+  page2: Alphabet.html
+  page3: Grammar.html
+  page4: Verbs and Vocabulary.html
+  page5: Russian Culture.html
+  page6: Extra Information.html
  
