--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # --- Change what appears in the banner --- #
 title: LearnRussian!
-description: Join 258 million Russian speakers and learn the largest native language in Europe.
+description: <b>Join 258 million Russian speakers and learn the largest native language in Europe.</b>
 
 # --- Change language of site --- #
 lang: En
